Header first version

--- a/index.html
+++ b/index.html
@@ -11,10 +11,21 @@
 </head>
 <body>
     <header>
+        <nav>
+            <div class="row">
+                <img src="resources/img/gzw-logo.svg" alt="Gdzie Zjesc Wege logo" class="logo"/>
+                <ul class="main-nav">
+                    <li><a href="#">Mapa restauracji</a></li>
+                    <li><a href="#">O nas</a></li>
+                    <li><a href="#">Nasze miasta</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </div>
+        </nav>
         <div class="hero-text-box">
-            <h1>Pyszne wegańskie jedzenie. Gdziekolwiek jesteś.</h1>
-            <a href="#">Jestem głodny</a>
-            <a href="#">Dowiedz się więcej</a>
+            <h1>Pyszne wegańskie jedzenie. <br>Gdziekolwiek jesteś.</h1>
+            <a class="btn btn-full" href="#">Jestem głodny</a>
+            <a class="btn btn-ghost" href="#">Dowiedz się więcej</a>
         </div>
     </header>
 </body>
