--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Gdzie Zjeść Wege - aplikacja dla szukających wegańskiego jedzenia</title>
     <link rel="stylesheet" href="vendors/css/normalize.css">
     <link rel="stylesheet" href="vendors/css/grid.css">
+    <link rel="stylesheet" href="vendors/css/ionicons.min.css">
     <link rel="stylesheet" href="resources/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
 </head>
@@ -28,6 +29,36 @@
             <a class="btn btn-ghost" href="#">Dowiedz się więcej</a>
         </div>
     </header>
+    <section class="section-features">
+        <div class="row">
+            <h2>Wegańskie jedzenie blisko Ciebie</h2>
+            <p class="long-copy">
+                Cześć, jesteśmy Gdzie Zjeść Wege, nowe miejsce w internecie, które pomoze Ci błyskawicznie znalezć restaurację w Twojej okolicy, które serwuje kuchnię roślinną.
+            </p>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-4 box">
+                <i class="ion-search icon-big"></i>
+                <h3>Łatwe wyszukiwanie</h3>
+                <p>Wystarczy ze wybierzesz miasto i wpiszesz na co masz ochotę, a my wyświetlimy ci listę restauracji, które serwują dania tego typu.</p>
+            </div>
+            <div class="col span-1-of-4 box">
+                <i class="ion-information icon-big"></i>
+                <h3>Komplet informacji</h3>
+                <p>Dowiesz się jak do wybranego miejsca dojechać, jakie oferuje menu, a takze poznasz opinie innych!</p>
+            </div>
+            <div class="col span-1-of-4 box">
+                <i class="ion-wand icon-big"></i>
+                <h3>Szczegółowe filtry</h3>
+                <p>Dla bardziej wymagających przygotowaliśmy listę filtrów wyszukiwania. Znajdziecie wśród nich między innymi rodzaj kuchni, przedział cenowy, a nawet przyjazność zwierzętom!</p>
+            </div>
+            <div class="col span-1-of-4 box">
+                <i class="ion-ios-paw icon-big"></i>
+                <h3>Wspieramy zwierzęta</h3>
+                <p>10% zysku z reklam, które wyświetlają się na naszej stronie przekazujemy na rzecz stowarzyszenia Otwarte Klatki, które walczy o lepszy los dla zwierząt hodowanych przemysłowo.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
