Two more sections (with temporary imgs)

--- a/index.html
+++ b/index.html
@@ -59,6 +59,117 @@
             </div>
         </div>
     </section>
+    <section class="section-meals">
+        <ul class="meals-showcase clearfix" >
+            <li><img src="resources/img/_1.jpg" alt="alt text TODO" class="meal-photo"></li>
+            <li><img src="resources/img/_2.jpg" alt="alt text TODO" class="meal-photo"></li>
+            <li><img src="resources/img/_3.jpg" alt="alt text TODO" class="meal-photo"></li>
+            <li><img src="resources/img/_4.jpg" alt="alt text TODO" class="meal-photo"></li>
+        </ul>
+        <ul class="meals-showcase clearfix">
+            <li><img src="resources/img/_5.jpg" alt="alt text TODO" class="meal-photo"></li>
+            <li><img src="resources/img/_6.jpg" alt="alt text TODO" class="meal-photo"></li>
+            <li><img src="resources/img/_7.jpg" alt="alt text TODO" class="meal-photo"></li>
+            <li><img src="resources/img/_8.jpg" alt="alt text TODO" class="meal-photo"></li>
+        </ul>
+    </section>
+    <section class="section-steps">
+        <div class="row">
+            <h2>How it works?</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-2 steps-box">
+                <img src="resources/img/app-iPhone.png" alt="GZW app on iPhone" class="app-screen">
+            </div>
+            <div class="col span-1-of-2 steps-box">
+                <div class="works-step">
+                    <div>1</div>
+                    <p>Wybierz miasto w którym chcesz wyszukiwać restauracje.</p>
+                </div>
+                <div class="works-step">
+                    <div>2</div>
+                    <p>Podaj szczegóły wyszukiwania - konkretny adres, serwowaną kuchnię lub ulubione danie.</p>
+                </div>
+                <div class="works-step">
+                    <div>3</div>
+                    <p>Wybierz restaurację z wyszukanej listy.</p>
+                </div>
+                <a href="#" class="btn-app"><img src="resources/img/download-app.svg" alt="App store button"></a>
+                <a href="#" class="btn-app"><img src="resources/img/download-app-android.png" alt="Play store button"></a>
+            </div>
+        </div>
+    </section>
+    <section class="section-cities">
+        <div class="row">
+            <h2>Miasta, które obsługujemy</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-4 box">
+                <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+                <h3>Lisbon</h3>
+                <div class="city-feature">
+                    <i class="ion-ios-person"></i>
+                    X restauracji
+                </div>       
+                <div class="city-feature">
+                    <i class="ion-ios-star"></i>
+                    X róznych kuchni
+                </div> 
+                <div class="city-feature">
+                    <i class="ion-social-twitter"></i>
+                    <a href="#">@XXXX</a>
+                </div>      
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="resources/img/berlin.jpg" alt="Lisbon">
+                <h3>Lisbon</h3>
+                <div class="city-feature">
+                    <i class="ion-ios-person"></i>
+                    X restauracji
+                </div>       
+                <div class="city-feature">
+                    <i class="ion-ios-star"></i>
+                    X róznych kuchni
+                </div> 
+                <div class="city-feature">
+                    <i class="ion-social-twitter"></i>
+                    <a href="#">@XXXX</a>
+                </div>      
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="resources/img/san-francisco.jpg" alt="Lisbon">
+                <h3>Lisbon</h3>
+                <div class="city-feature">
+                    <i class="ion-ios-person"></i>
+                    X restauracji
+                </div>       
+                <div class="city-feature">
+                    <i class="ion-ios-star"></i>
+                    X róznych kuchni
+                </div> 
+                <div class="city-feature">
+                    <i class="ion-social-twitter"></i>
+                    <a href="#">@XXXX</a>
+                </div>      
+            </div>
+            <div class="col span-1-of-4 box">
+                <img src="resources/img/london.jpg" alt="London">
+                <h3>London</h3>
+                <div class="city-feature">
+                    <i class="ion-ios-person"></i>
+                    X restauracji
+                </div>       
+                <div class="city-feature">
+                    <i class="ion-ios-star"></i>
+                    X róznych kuchni
+                </div> 
+                <div class="city-feature">
+                    <i class="ion-social-twitter"></i>
+                    <a href="#">@XXXX</a>
+                </div>      
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
