New phone mockup

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="row">
             <div class="col span-1-of-2 steps-box">
-                <img src="resources/img/app-iPhone.png" alt="GZW app on iPhone" class="app-screen">
+                <img src="resources/img/app-iPhoneX.png" alt="GZW app on iPhone" class="app-screen">
             </div>
             <div class="col span-1-of-2 steps-box">
                 <div class="works-step">
@@ -106,10 +106,10 @@
         <div class="row">
             <div class="col span-1-of-4 box">
                 <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
-                <h3>Lisbon</h3>
+                <h3>Wrocław</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
-                    X restauracji
+                    15+ restauracji
                 </div>       
                 <div class="city-feature">
                     <i class="ion-ios-star"></i>
@@ -122,10 +122,10 @@
             </div>
             <div class="col span-1-of-4 box">
                 <img src="resources/img/berlin.jpg" alt="Lisbon">
-                <h3>Lisbon</h3>
+                <h3>Warszawa</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
-                    X restauracji
+                    40+ restauracji
                 </div>       
                 <div class="city-feature">
                     <i class="ion-ios-star"></i>
@@ -138,10 +138,10 @@
             </div>
             <div class="col span-1-of-4 box">
                 <img src="resources/img/san-francisco.jpg" alt="Lisbon">
-                <h3>Lisbon</h3>
+                <h3>Kraków</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
-                    X restauracji
+                    20+ restauracji
                 </div>       
                 <div class="city-feature">
                     <i class="ion-ios-star"></i>
@@ -154,7 +154,7 @@
             </div>
             <div class="col span-1-of-4 box">
                 <img src="resources/img/london.jpg" alt="London">
-                <h3>London</h3>
+                <h3>...i inne</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
                     X restauracji
