City images change

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <div class="row">
             <div class="col span-1-of-4 box">
-                <img src="resources/img/lisbon-3.jpg" alt="Lisbon">
+                <img src="resources/img/_Wroclaw.jpg" alt="Wrocław">
                 <h3>Wrocław</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
@@ -121,7 +121,7 @@
                 </div>      
             </div>
             <div class="col span-1-of-4 box">
-                <img src="resources/img/berlin.jpg" alt="Lisbon">
+                <img src="resources/img/_Warszawa.jpg" alt="Warszawa">
                 <h3>Warszawa</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
@@ -137,7 +137,7 @@
                 </div>      
             </div>
             <div class="col span-1-of-4 box">
-                <img src="resources/img/san-francisco.jpg" alt="Lisbon">
+                <img src="resources/img/_Krakow.jpg" alt="Kraków">
                 <h3>Kraków</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
@@ -153,7 +153,7 @@
                 </div>      
             </div>
             <div class="col span-1-of-4 box">
-                <img src="resources/img/london.jpg" alt="London">
+                <img src="resources/img/_Gdansk.jpg" alt="Gdańsk">
                 <h3>...i inne</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
