--- a/index.html
+++ b/index.html
@@ -170,6 +170,33 @@
             </div>
         </div>
     </section>
+
+    <section class="section-testimonials">
+        <div class="row">
+            <h2>POZNAJ OPINIE NASZYCH KLIENTÓW</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Gdzie Zjeść Wege to świetny serwis, który ju kilkukrotnie pomógł mi w znalezieniu restauracji z roślinnym jedzeniem w mieście, którego nie znam.
+                    <cite><img src="/resources/img/person-1.jpeg" alt="Person 1">Isla Burrows</cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Super sprawa! Nawet nie wiedziałam, ze w mojej okolicy jest tyle roślinnych knajpek!
+                    <cite><img src="/resources/img/person-2.jpeg" alt="Person 2">Elina Mcdougall</cite>
+                </blockquote>
+            </div>
+            <div class="col span-1-of-3">
+                <blockquote>
+                    Bardzo mi się podoba opcja wyznaczenia trasy do konkretnej restauracji. Jest to pomocne zwłaszcza w godzinach szczytu, gdy korki znacznie wydłuzają podróz - dzięki GZW mogę wbrać miejsce, do którego dostanę się najszybciej.
+                    <cite><img src="/resources/img/person-3.jpeg" alt="Person 3">Drew Bowden</cite>
+                </blockquote>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
 
