--- a/index.html
+++ b/index.html
@@ -197,6 +197,74 @@
         </div>
 
     </section>
+
+    <section class="section-plans">
+        <div class="row">
+            <h2>Wybierz wersję dla siebie</h2>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Premium</h3>
+                        <p class="plan-price">30zł <span>/ m-c</span></p>
+                        <p class="plan-price-month">To tylko 1zł dziennie!</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><i class="ion-ios-checkmark-empty icon-small"></i>Olbrzymia baza restauracji</li>
+                            <li><i class="ion-ios-checkmark-empty icon-small"></i>Wskazówki dojazdu</li>
+                            <li><i class="ion-ios-checkmark-empty icon-small"></i>Informacje o promocjach</li>
+                            <li><i class="ion-ios-checkmark-empty icon-small"></i>Powiadomienia o zmianach menu</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-full">WYBIERZ</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>Pro</h3>
+                        <p class="plan-price">15zł <span>/ m-c</span></p>
+                        <p class="plan-price-month">To tylko 50gr dziennie!</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><i class="ion-ios-checkmark-empty icon-small"></i>Olbrzymia baza restauracji</li>
+                            <li><i class="ion-ios-checkmark-empty icon-small"></i>Wskazówki dojazdu</li>
+                            <li><i class="ion-ios-close-empty icon-small"></i>Informacje o promocjach</li>
+                            <li><i class="ion-ios-close-empty icon-small"></i>Powiadomienia o zmianach menu</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-ghost">WYBIERZ</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col span-1-of-3">
+                <div class="plan-box">
+                    <div>
+                        <h3>FREE</h3>
+                        <p class="plan-price">0zl</p>
+                        <p class="plan-price-month">Wypróbuj juz dziś!</p>
+                    </div>
+                    <div>
+                        <ul>
+                            <li><i class="ion-ios-checkmark-empty icon-small"></i>Olbrzymia baza restauracji</li>
+                            <li><i class="ion-ios-close-empty icon-small"></i>Wskazówki dojazdu</li>
+                            <li><i class="ion-ios-close-empty icon-small"></i>Informacje o promocjach</li>
+                            <li><i class="ion-ios-close-empty icon-small"></i>Powiadomienia o zmianach menu</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <a href="#" class="btn btn-ghost">WYBIERZ</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
 
