--- a/index.html
+++ b/index.html
@@ -265,6 +265,69 @@
             </div>
         </div>
     </section>
+    <section class="section-form">
+        <div class="row">
+            <h2>Skontaktuj się z nami</h2>
+        </div>
+        <div class="row">
+            <form method="post"
+                  action="#"
+                  class="contact-form">
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="name">Imię</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input id="name" name="name" type="text" placeholder="Twoje imię" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="email">E-mail</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input id="email" name="email" type="email" placeholder="Twój e-mail" required>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="findus">Skąd się o nas dowiedziałeś?</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <select name="findus" id="findus">
+                            <option value="internet" selected>Internet</option>
+                            <option value="friends">Znajomi</option>
+                            <option value="other">Inne</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="newsletter">Newsletter?</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input id="newsletter" name="newsletter" type="checkbox" checked> Zapisz mnie
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label for="content">Twoja wiadomość</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <textarea id="content" name="content" placeholder="Twoja wiadomość" required></textarea>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col span-1-of-3">
+                        <label>&nbsp;</label>
+                    </div>
+                    <div class="col span-2-of-3">
+                        <input type="submit" value="Wyślij">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
 </body>
 </html>
 
