--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </section>
     <section class="section-steps">
         <div class="row">
-            <h2>How it works?</h2>
+            <h2>Jak to działa?</h2>
         </div>
         <div class="row">
             <div class="col span-1-of-2 steps-box">
@@ -328,6 +328,31 @@
             </form>
         </div>
     </section>
+    <footer>
+        <div class="row">
+            <div class="col span-1-of-2">
+                <ul class="footer-nav">
+                    <li><a href="#">O nas</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Dla prasy</a></li>
+                    <li><a href="#">Aplikacja iOS</a></li>
+                </ul>
+            </div>
+            <div class="col span-1-of-2">
+                <ul class="social-links">
+                    <li><a href="#"><i class="ion-social-facebook"></i></a></li>
+                    <li><a href="#"><i class="ion-social-twitter"></i></a></li>
+                    <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
+                    <li><a href="#"><i class="ion-social-instagram"></i></a></li>
+                </ul>
+            </div>
+            <div class="row">
+                <p>
+                    Copyright &copy; 2020 Gdzie Zjeść Wege. Wszelkie prawa zastrzezone.
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 
