--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="vendors/css/grid.css">
     <link rel="stylesheet" href="vendors/css/ionicons.min.css">
     <link rel="stylesheet" href="resources/css/style.css">
+    <link rel="stylesheet" href="resources/css/queries.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -109,11 +110,11 @@
                 <h3>Wrocław</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
-                    15+ restauracji
+                    <div>15+ restauracji</div>
                 </div>       
                 <div class="city-feature">
                     <i class="ion-ios-star"></i>
-                    X róznych kuchni
+                    <div>X róznych kuchni</div>
                 </div> 
                 <div class="city-feature">
                     <i class="ion-social-twitter"></i>
@@ -125,11 +126,11 @@
                 <h3>Warszawa</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
-                    40+ restauracji
+                    <div>40+ restauracji</div>
                 </div>       
                 <div class="city-feature">
                     <i class="ion-ios-star"></i>
-                    X róznych kuchni
+                    <div>X róznych kuchni</div>
                 </div> 
                 <div class="city-feature">
                     <i class="ion-social-twitter"></i>
@@ -141,11 +142,11 @@
                 <h3>Kraków</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
-                    20+ restauracji
+                    <div>20+ restauracji</div>
                 </div>       
                 <div class="city-feature">
                     <i class="ion-ios-star"></i>
-                    X róznych kuchni
+                    <div>X róznych kuchni</div>
                 </div> 
                 <div class="city-feature">
                     <i class="ion-social-twitter"></i>
@@ -157,11 +158,11 @@
                 <h3>...i inne</h3>
                 <div class="city-feature">
                     <i class="ion-ios-person"></i>
-                    X restauracji
+                    <div>X restauracji</div>
                 </div>       
                 <div class="city-feature">
                     <i class="ion-ios-star"></i>
-                    X róznych kuchni
+                    <div>X róznych kuchni</div>
                 </div> 
                 <div class="city-feature">
                     <i class="ion-social-twitter"></i>
