--- a/index.html
+++ b/index.html
@@ -354,6 +354,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/resources/js/scripts.js"></script>
 </body>
 </html>
 
