--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <nav>
             <div class="row">
                 <img src="resources/img/gzw-logo.svg" alt="Gdzie Zjesc Wege logo" class="logo"/>
+                <img src="resources/img/gzw-logo.svg" alt="Gdzie Zjesc Wege logo" class="logo-black"/>
                 <ul class="main-nav">
                     <li><a href="#">Mapa restauracji</a></li>
                     <li><a href="#">O nas</a></li>
@@ -30,7 +31,7 @@
             <a class="btn btn-ghost" href="#">Dowiedz się więcej</a>
         </div>
     </header>
-    <section class="section-features">
+    <section class="section-features js--section-features">
         <div class="row">
             <h2>Wegańskie jedzenie blisko Ciebie</h2>
             <p class="long-copy">
@@ -355,6 +356,7 @@
         </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="/vendors/js/jquery.waypoints.min.js"></script>
     <script src="/resources/js/scripts.js"></script>
 </body>
 </html>
