--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
                 <img src="resources/img/gzw-logo.svg" alt="Gdzie Zjesc Wege logo" class="logo"/>
                 <img src="resources/img/gzw-logo.svg" alt="Gdzie Zjesc Wege logo" class="logo-black"/>
                 <ul class="main-nav">
-                    <li><a href="#">Mapa restauracji</a></li>
-                    <li><a href="#">O nas</a></li>
-                    <li><a href="#">Nasze miasta</a></li>
-                    <li><a href="#">Kontakt</a></li>
+                    <li><a href="#features">Mapa restauracji</a></li>
+                    <li><a href="#about">O nas</a></li>
+                    <li><a href="#cities">Nasze miasta</a></li>
+                    <li><a href="#contact">Kontakt</a></li>
                 </ul>
             </div>
         </nav>
         <div class="hero-text-box">
             <h1>Pyszne wegańskie jedzenie. <br>Gdziekolwiek jesteś.</h1>
-            <a class="btn btn-full" href="#">Jestem głodny</a>
-            <a class="btn btn-ghost" href="#">Dowiedz się więcej</a>
+            <a class="btn btn-full js--scroll-to-plans" href="#">Jestem głodny</a>
+            <a class="btn btn-ghost js--scroll-to-start" href="#">Dowiedz się więcej</a>
         </div>
     </header>
-    <section class="section-features js--section-features">
+    <section class="section-features js--section-features" id="features">
         <div class="row">
             <h2>Wegańskie jedzenie blisko Ciebie</h2>
             <p class="long-copy">
@@ -75,7 +75,7 @@
             <li><img src="resources/img/_8.jpg" alt="alt text TODO" class="meal-photo"></li>
         </ul>
     </section>
-    <section class="section-steps">
+    <section class="section-steps" id="about">
         <div class="row">
             <h2>Jak to działa?</h2>
         </div>
@@ -101,7 +101,7 @@
             </div>
         </div>
     </section>
-    <section class="section-cities">
+    <section class="section-cities" id="cities">
         <div class="row">
             <h2>Miasta, które obsługujemy</h2>
         </div>
@@ -200,7 +200,7 @@
 
     </section>
 
-    <section class="section-plans">
+    <section class="section-plans js--section-plans">
         <div class="row">
             <h2>Wybierz wersję dla siebie</h2>
         </div>
@@ -267,7 +267,7 @@
             </div>
         </div>
     </section>
-    <section class="section-form">
+    <section class="section-form" id="contact">
         <div class="row">
             <h2>Skontaktuj się z nami</h2>
         </div>
