--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="vendors/css/normalize.css">
     <link rel="stylesheet" href="vendors/css/grid.css">
     <link rel="stylesheet" href="vendors/css/ionicons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <link rel="stylesheet" href="resources/css/style.css">
     <link rel="stylesheet" href="resources/css/queries.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Playfair+Display:ital@0;1&display=swap" rel="stylesheet">
@@ -38,7 +39,7 @@
                 Cześć, jesteśmy Gdzie Zjeść Wege, nowe miejsce w internecie, które pomoze Ci błyskawicznie znalezć restaurację w Twojej okolicy, które serwuje kuchnię roślinną.
             </p>
         </div>
-        <div class="row">
+        <div class="row js--wp-1">
             <div class="col span-1-of-4 box">
                 <i class="ion-search icon-big"></i>
                 <h3>Łatwe wyszukiwanie</h3>
@@ -81,7 +82,7 @@
         </div>
         <div class="row">
             <div class="col span-1-of-2 steps-box">
-                <img src="resources/img/app-iPhoneX.png" alt="GZW app on iPhone" class="app-screen">
+                <img src="resources/img/app-iPhoneX.png" alt="GZW app on iPhone" class="app-screen js--wp-2">
             </div>
             <div class="col span-1-of-2 steps-box">
                 <div class="works-step">
@@ -105,7 +106,7 @@
         <div class="row">
             <h2>Miasta, które obsługujemy</h2>
         </div>
-        <div class="row">
+        <div class="row js--wp-3">
             <div class="col span-1-of-4 box">
                 <img src="resources/img/_Wroclaw.jpg" alt="Wrocław">
                 <h3>Wrocław</h3>
@@ -205,7 +206,7 @@
             <h2>Wybierz wersję dla siebie</h2>
         </div>
         <div class="row">
-            <div class="col span-1-of-3">
+            <div class="col span-1-of-3 js--wp-4">
                 <div class="plan-box">
                     <div>
                         <h3>Premium</h3>
