--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             <div class="row">
                 <img src="resources/img/gzw-logo.svg" alt="Gdzie Zjesc Wege logo" class="logo"/>
                 <img src="resources/img/gzw-logo.svg" alt="Gdzie Zjesc Wege logo" class="logo-black"/>
-                <ul class="main-nav">
+                <ul class="main-nav js--main-nav">
                     <li><a href="#features">Mapa restauracji</a></li>
                     <li><a href="#about">O nas</a></li>
                     <li><a href="#cities">Nasze miasta</a></li>
                     <li><a href="#contact">Kontakt</a></li>
                 </ul>
+                <a class="mobile-nav-icon js--nav-icon"><i class="ion-navicon-round"></i></a>
             </div>
         </nav>
         <div class="hero-text-box">
